# go-practice

1.channel/: 1.recever_sender_channel.go  10.pipeline_cancel_errChannel.go  11.atomic_vs_mutex.go  12.atomic_config.go  13.dlq_channel_batch.go  2.race.go  3.worker-communication.go  4.waitGroup1.go  5.waitGroup_channel.go  6.pipeline1.go  7.pipeline2.go  9.pipeline_errChannel.go  main.go
10.grpc-basic/: MODULE.bazel  bazel-10.grpc-basic  bazel-bin  bazel-out  bazel-testlogs  buf.gen.yaml  go.mod  readme.md
10.grpc-basic/idl/: BUILD.bazel
10.grpc-basic/idl/post/v1/: BUILD.bazel  post.proto
10.grpc-basic/idl/user/v1/: BUILD.bazel  user.proto
10.grpc-basic/proto/post/v1/: post.pb.go  post_grpc.pb.go
10.grpc-basic/proto/user/v1/: user.pb.go  user_grpc.pb.go
2.io_interface/: 16.io_reader.go  17.reader_encoder_writer.go  18.zipWriter_file_write.go
3.oops/: 14.interface_polymorphism.go  15.struct_composition.go  20.json_marshal_unmarshal.go
4.built_in/: 21.assertion_type.go  22.String_implementation.go  23.string_with_space_read.go  24.bufio_reader.go  25.os_operation.go
5.gin/: 26.gin_crud.go  27.gin_stream.go  go.mod  go.sum  main.go
5.gin/uploads/: output.txt
6.gin-project/: docker-compose.yml  dockerfile  go.mod  go.sum  main.go
6.gin-project/config/: config.go
6.gin-project/controllers/: auth_controller.go
6.gin-project/middlewares/: jwt_middleware.go
6.gin-project/models/: user.go
6.gin-project/routes/: auth_routes.go
7.mongo-app/: 28.basic_mongo.go  docker-compose.yml  go.mod  go.sum  main.go
7.mongo-app/controllers/: postController.go  userController.go
7.mongo-app/models/: post.go  user.go
7.mongo-app/routes/: postRoutes.go  userRoutes.go
7.mongo-app/services/: mongoService.go
8.postgres-app/: 29.postgres-basic.go  docker-compose.yml  go.mod  go.sum  main.go
8.postgres-app/controllers/: postcontroller.go  userController.go
8.postgres-app/models/: post.go  user.go
8.postgres-app/routes/: postRoute.go  userRoute.go
8.postgres-app/services/: postgresServices.go
9.redis-app/: 30.redis-basic.go  31.publisher.go  32.subscriber.go  docker-compose.yml  go.mod  main.go
(+1 files in other folders)
