module(
    name = "grpc_basic",
    version = "0.1.0",
)

# Go rules (exact versions available in Bazel Central Registry)
bazel_dep(name = "rules_go", version = "0.59.0")       # valid BCR version :contentReference[oaicite:1]{index=1}

# Protobuf rules (working BCR version)
bazel_dep(name = "rules_proto", version = "7.0.2")     # valid BCR version :contentReference[oaicite:2]{index=2}

# Protobuf + gRPC Go support
bazel_dep(name = "rules_proto_grpc_go", version = "5.8.0")  # valid BCR version :contentReference[oaicite:3]{index=3}
