load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_go//:defs.bzl", "go_proto_library", "go_grpc_library")

proto_library(
    name = "post_proto",
    srcs = ["post.proto"],
    deps = ["//idl/user/v1:user_proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "post_go_proto",
    protos = [":post_proto"],
    importpath = "grpc-project/proto/post/v1",
    deps = [
        "//idl/user/v1:user_go_proto",
    ],
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "post_go_grpc",
    protos = [":post_proto"],
    importpath = "grpc-project/proto/post/v1",
    deps = [
        ":post_go_proto",
        "//idl/user/v1:user_go_grpc",
    ],
    visibility = ["//visibility:public"],
)
